--- a/styles/Login.module.scss
+++ b/styles/Login.module.scss
@@ -1,3 +1,5 @@
+@import './variables.scss';
+
 .root {
   height: 100vh;
   display: flex;
@@ -12,6 +14,8 @@
 .loginCard {
   max-width: 320px;
   padding: 24px;
+  border-radius: 16px;
+  box-shadow: $box-shadow;
 }
 
 .title {
