--- a/src/styles/Login.module.scss
+++ b/src/styles/Login.module.scss
@@ -14,8 +14,8 @@
 .loginCard {
   max-width: 320px;
   padding: 24px;
-  border-radius: 16px;
-  box-shadow: $box-shadow;
+  // border-radius: 16px;
+  // box-shadow: $box-shadow;
 }
 
 .title {
