--- a/src/styles/Profile.module.scss
+++ b/src/styles/Profile.module.scss
@@ -22,3 +22,10 @@
 .homeBtn {
   margin-top: 24px;
 }
+
+.errorMessage {
+  padding: 16px;
+  color: #ff0000;
+  word-wrap: break-word;
+  max-width: 100%;
+}
