--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,6 +1,2 @@
-// $box-shadow: 0 4px 12px rgb(104 112 118 / 0.08),
-//   0 20px 8px rgb(104 112 118 / 0.04);
-
-//$box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-
+$primary-color: #7635dc;
 $box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
