fix: ios css bugs

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -19,6 +19,10 @@ a {
   user-select: none;
 }
 
+input {
+  user-select: auto;
+}
+
 .flex {
   display: flex;
 }
@@ -49,25 +53,4 @@ a {
 
 .cursor-pointer {
   cursor: pointer;
-}
-
-@media screen and (min-width: 512px) {
-  body {
-    background: linear-gradient(25deg, #7635dc, #fafeff);
-    height: 100vh;
-    top: 0;
-    position: absolute;
-    width: 100%;
-  }
-
-  #__next {
-    max-width: 412px;
-    margin: 24px auto;
-    border-radius: 32px;
-    overflow: hidden;
-    box-shadow: $box-shadow;
-    height: calc(100vh - 48px);
-    background-color: #fff;
-    position: relative;
-  }
 }
