--- a/src/components/GroupsSection/GroupsSection.module.scss
+++ b/src/components/GroupsSection/GroupsSection.module.scss
@@ -48,6 +48,14 @@
   margin-top: 20px;
 }
 
+.searchBtn {
+  background: #e0d1f7;
+
+  &:hover {
+    background: #e0d1f7;
+  }
+}
+
 .usersTitle {
   margin-top: 16px;
 }
