--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -54,3 +54,14 @@ input {
 .cursor-pointer {
   cursor: pointer;
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
