--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -6,5 +6,9 @@
   justify-content: space-between;
   background-color: white;
   padding: 8px 24px;
-  box-shadow: $box-shadow;
+  box-shadow: 0 0 16px #ccc;
+  position: fixed;
+  width: 100%;
+  z-index: 1;
+  bottom: 0px;
 }
