--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -13,3 +13,26 @@
   bottom: 0px;
   height: 64px;
 }
+
+.menuItem {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.activeRoute {
+  background-color: $primary-color;
+  color: white;
+  display: flex;
+  align-items: center;
+  padding: 6px 16px;
+  border-radius: 32px;
+  font-size: 12px;
+
+  & svg {
+    fill: white;
+    margin-right: 8px;
+    margin-bottom: 2px;
+  }
+}
