--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -60,6 +60,7 @@ input {
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
+  appearance: none;
   margin: 0;
 }
 
