--- a/src/components/Transactions/Transactions.module.scss
+++ b/src/components/Transactions/Transactions.module.scss
@@ -70,3 +70,26 @@
     min-width: auto;
   }
 }
+
+@media screen and (min-width: 768px) {
+  .fabBtn {
+    right: 16px;
+    bottom: 16px;
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  .transaction {
+    background-color: #303030;
+    box-shadow: none;
+    color: #f5f7f9;
+  }
+
+  .form {
+    background-color: #303030;
+
+    input {
+      color-scheme: dark;
+    }
+  }
+}
