--- a/src/styles/Login.module.scss
+++ b/src/styles/Login.module.scss
@@ -35,3 +35,10 @@
   text-align: center;
   margin-top: 16px;
 }
+
+@media (prefers-color-scheme: dark) {
+  .loginCard {
+    background-color: #252525;
+    color: #f5f7f9;
+  }
+}
