--- a/src/styles/Profile.module.scss
+++ b/src/styles/Profile.module.scss
@@ -29,3 +29,9 @@
   word-wrap: break-word;
   max-width: 100%;
 }
+
+@media (prefers-color-scheme: dark) {
+  .profileCard {
+    background-color: #303030;
+  }
+}
