--- a/src/styles/Login.module.scss
+++ b/src/styles/Login.module.scss
@@ -2,6 +2,7 @@
 
 .root {
   height: 100vh;
+  height: 100dvh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -14,8 +15,8 @@
 .loginCard {
   max-width: 320px;
   padding: 24px;
-  // border-radius: 16px;
-  // box-shadow: $box-shadow;
+  z-index: 2;
+  position: relative;
 }
 
 .title {
