--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -81,7 +81,8 @@ input[type=number] {
 
   html,
   body {
-    background-color: #252525;
+    //background-color: #252525;
+    background-color: #161c24;
     color: #f5f7f9;
   }
 
