--- a/src/components/Transactions/Transactions.module.scss
+++ b/src/components/Transactions/Transactions.module.scss
@@ -81,7 +81,7 @@
 
 @media (prefers-color-scheme: dark) {
   .transaction {
-    background-color: #303030;
+    background-color: #2b2d42;
     box-shadow: none;
     color: #f5f7f9;
   }
