--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -108,11 +108,11 @@ input[type=number] {
     border-color: #f5f7f9 !important;
   }
 
-  .MuiMenu-paper {
-    background-color: #222;
+  .MuiPaper-root {
+    background-color: #2b2d42;
   }
 
-  .MuiPaper-root {
-    background-color: #303030;
+  .MuiMenu-paper {
+    background-color: #0f0123;
   }
 }
