--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,6 +1,7 @@
 @import '../../styles/variables.scss';
 
 .header {
+  background-color: #161c24;
   display: flex;
   flex-direction: column;
   align-items: center;
