add: glassmorphism ui

--- a/src/components/Backgrounds/Backgrounds.module.scss
+++ b/src/components/Backgrounds/Backgrounds.module.scss
@@ -37,7 +37,7 @@
   }
 
   &::before {
-    background-color: #7635dc;
+    background-color: #7635dcbf;
     transform: rotate(12deg) translate(0, -80px) scale(1.5);
   }
 }
