--- a/src/components/GroupsSection/GroupsSection.module.scss
+++ b/src/components/GroupsSection/GroupsSection.module.scss
@@ -14,7 +14,8 @@
   flex-shrink: 0;
   cursor: pointer;
   border: 2px solid transparent;
-
+  background-color: rgb(255 255 255 / 31%);
+  ;
 
   &:hover {
     border: 2px solid $primary-color;
@@ -90,6 +91,7 @@
 
 @media (prefers-color-scheme: dark) {
   .groupCard {
-    background-color: #2b2d42;
+    //background-color: #2b2d42;
+    background-color: rgba(16 18 27 / 40%);
   }
 }
