--- a/src/components/Transactions/Transactions.module.scss
+++ b/src/components/Transactions/Transactions.module.scss
@@ -17,6 +17,7 @@
   justify-content: space-between;
   border-radius: 12px;
   box-shadow: $box-shadow;
+  background: rgb(255 255 255 / 31%);
 }
 
 .description {
@@ -43,6 +44,7 @@
   padding: 2px 6px;
   margin-top: 2px;
   border-radius: 4px;
+  color: #f7f7f7;
 }
 
 .accountIcon {
@@ -105,7 +107,8 @@
 
 @media (prefers-color-scheme: dark) {
   .transaction {
-    background-color: #2b2d42;
+    //background-color: #2b2d42;
+    background: rgb(146 151 179 / 13%);
     box-shadow: none;
     color: #f5f7f9;
   }
