--- a/src/styles/Login.module.scss
+++ b/src/styles/Login.module.scss
@@ -1,8 +1,7 @@
 @import './variables.scss';
 
 .root {
-  height: 100vh;
-  height: 100dvh;
+  height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -17,6 +16,7 @@
   padding: 24px;
   z-index: 2;
   position: relative;
+  background-color: #ffffff80;
 }
 
 .title {
@@ -39,6 +39,7 @@
 
 @media (prefers-color-scheme: dark) {
   .loginCard {
+    background-color: #2b2d4280;
     color: #f5f7f9;
   }
 
