--- a/src/styles/PrivateLayout.module.scss
+++ b/src/styles/PrivateLayout.module.scss
@@ -1,11 +1,12 @@
 .layout {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  height: 100%;
 }
 
 .layoutContent {
   flex: 1;
+  overflow-y: scroll;
 }
 
 @media screen and (min-width: 768px) {
