--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,24 +1,40 @@
 @import "./variables.scss";
 
+* {
+  box-sizing: border-box;
+  user-select: none;
+  font-family: 'Public Sans',
+    sans-serif;
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, 'Public Sans', Oxygen, Ubuntu, Cantarell,
     Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  background-color: #f5f7f9;
+  //background-color: #f5f7f9;
+}
+
+body {
+  background: url('../../assets/bg.jpg');
+  background-position: center;
+  background-size: cover;
+}
+
+.app {
+  background-color: rgb(255 255 255 / 31%);
+  backdrop-filter: blur(20px);
+  margin: 12px;
+  border-radius: 24px;
+  height: calc(100vh - 24px);
+  height: calc(100dvh - 24px);
+  overflow: scroll;
 }
 
 a {
   color: inherit;
   text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
-  user-select: none;
-  font-family: 'Public Sans',
-    sans-serif;
 }
 
 input {
@@ -71,6 +87,13 @@ input[type=number] {
 }
 
 @media screen and (min-width: 768px) {
+  .app {
+    margin: 24px;
+    border-radius: 24px;
+    height: calc(100vh - 48px);
+    height: calc(100dvh - 48px);
+  }
+
   .sticky {
     position: sticky;
     top: 0;
@@ -79,11 +102,14 @@ input[type=number] {
 
 @media (prefers-color-scheme: dark) {
 
-  html,
-  body {
-    //background-color: #252525;
-    background-color: #161c24;
-    color: #f5f7f9;
+  // html,
+  // body {
+  //   background-color: #161c24;
+  //   color: #f5f7f9;
+  // }
+
+  .app {
+    background-color: rgba(16 18 27 / 40%);
   }
 
   * {
