--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -20,15 +20,14 @@ body {
   background: url('../../assets/bg.jpg');
   background-position: center;
   background-size: cover;
+  min-height: -webkit-fill-available;
 }
 
 .app {
   background-color: rgb(255 255 255 / 31%);
   backdrop-filter: blur(20px);
-  margin: 12px;
-  border-radius: 24px;
-  height: calc(100vh - 24px);
-  height: calc(100dvh - 24px);
+  height: 100vh;
+  height: 100dvh;
   overflow: scroll;
 }
 
@@ -88,10 +87,10 @@ input[type=number] {
 
 @media screen and (min-width: 768px) {
   .app {
-    margin: 24px;
+    margin: 16px;
     border-radius: 24px;
-    height: calc(100vh - 48px);
-    height: calc(100dvh - 48px);
+    height: calc(100vh - 32px);
+    height: calc(100dvh - 32px);
   }
 
   .sticky {
