--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -7,18 +7,21 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 8px 24px;
   position: fixed;
   width: 100%;
   z-index: 1;
   bottom: 0px;
-  height: 64px;
+  padding: 8px 12px;
+  padding-bottom: calc(8px + env(safe-area-inset-bottom));
 }
 
-.logo {
-  object-fit: contain;
-  width: 90%;
-  height: auto;
+// @supports (env(safe-area-inset-bottom)) {
+//   .header {
+//     padding-bottom: env(safe-area-inset-bottom, 12px);
+//   }
+// }
+
+.logoContainer {
   margin-top: 12;
   display: none;
 }
@@ -77,7 +80,7 @@
     border-right: 1px dashed rgb(0 0 0 / 60%);
   }
 
-  .logo {
+  .logoContainer {
     display: block;
   }
 
