add: add expense fullscreen dialog

--- a/src/components/Transactions/Transactions.module.scss
+++ b/src/components/Transactions/Transactions.module.scss
@@ -56,9 +56,17 @@
   margin-top: 4px;
 }
 
+.formContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 16px;
+}
+
 .formFields {
   min-width: 260px;
   width: 100%;
+  max-width: 900px;
 }
 
 .field {
