--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -143,6 +143,16 @@ input[type=number] {
     }
   }
 
+  .MuiMenuItem-root {
+    &:hover {
+      background-color: rgba(255, 255, 255, 0.4);
+    }
+
+    &.Mui-selected {
+      background-color: $primary-color;
+    }
+  }
+
   .MuiPaper-root {
     background-color: #2b2d42;
   }
