--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -11,15 +11,9 @@
   width: 100%;
   z-index: 1;
   bottom: 0px;
-  padding: 8px 12px;
+  padding: 4px 12px;
   padding-bottom: calc(8px + env(safe-area-inset-bottom));
 }
-
-// @supports (env(safe-area-inset-bottom)) {
-//   .header {
-//     padding-bottom: env(safe-area-inset-bottom, 12px);
-//   }
-// }
 
 .logoContainer {
   margin-top: 12;
@@ -32,6 +26,18 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-around;
+  display: none;
+}
+
+.menuMobile {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  width: 100%;
+
+  a {
+    width: auto;
+  }
 }
 
 .menuButton {
@@ -43,14 +49,6 @@
   padding: 8px;
   line-height: unset;
   box-shadow: none;
-}
-
-.menuLabelMobile {
-  display: block;
-}
-
-.menuLabelDesktop {
-  display: none;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -87,19 +85,16 @@
   .menu {
     margin-top: 24px;
     flex-direction: column;
+    display: block;
+  }
+
+  .menuMobile {
+    display: none;
   }
 
   .menuButton {
     margin-top: 12px;
     padding: 8px 24px;
     justify-content: flex-start;
-  }
-
-  .menuLabelMobile {
-    display: none;
-  }
-
-  .menuLabelDesktop {
-    display: block;
   }
 }
