--- a/src/styles/Profile.module.scss
+++ b/src/styles/Profile.module.scss
@@ -13,6 +13,8 @@
   padding: 24px;
   text-align: center;
   flex-direction: column;
+  background-color: #2b2d421a;
+  backdrop-filter: blur(20px);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -28,10 +30,4 @@
   color: #ff0000;
   word-wrap: break-word;
   max-width: 100%;
-}
-
-@media (prefers-color-scheme: dark) {
-  .profileCard {
-    background-color: #2b2d42;
-  }
 }
